# ESTATE_CHATBOT

./: .gitignore  AGENT.md  FRONTEND_IMPLEMENTATION_PLAN.md  PHASE_8_SUMMARY.md  README.md  docker-compose.yml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: briefs.py  glossary.py  messages.py  sessions.py
backend/app/core/: exceptions.py  logging.py  metrics.py
backend/app/db/: models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py
backend/app/db/repositories/: brief.py  glossary.py  message.py  session.py
backend/app/langchain/chains/: conversation.py
backend/app/langchain/tools/: extract_lead.py
backend/app/services/: brief_service.py  conversation_service.py  glossary_service.py  nlu_service.py  safety_service.py
backend/app/utils/: language.py
backend/scripts/: analyze_coverage.py  seed_glossary.py
backend/tests/: conftest.py
backend/tests/e2e/: test_buy_flow.py  test_rent_flow.py  test_sell_flow.py
backend/tests/fixtures/: __init__.py  test_data.py
backend/tests/integration/test_api/: test_briefs.py  test_glossary.py  test_messages.py  test_sessions.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_config.py  test_exceptions.py  test_main.py  test_models.py
backend/tests/unit/test_chains/: test_conversation.py
backend/tests/unit/test_core/: test_logging.py  test_metrics.py
backend/tests/unit/test_repositories/: test_brief_repository.py  test_glossary_repository.py  test_message_repository.py  test_session_repository.py
backend/tests/unit/test_services/: test_brief_service.py  test_conversation_service.py  test_glossary_service.py  test_nlu_service.py  test_safety_service.py
backend/tests/unit/test_tools/: test_extract_lead.py
backend/tests/unit/test_utils/: test_language.py
docs/development/: SETUP.md
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/ja/: translation.json
frontend/public/locales/vi/: translation.json
frontend/src/: vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/app/routes/: index.tsx
frontend/src/app/styles/: globals.css
frontend/src/entities/brief/: index.ts
frontend/src/entities/brief/api/: briefApi.ts
frontend/src/entities/brief/model/: types.ts
frontend/src/entities/glossary/: index.ts
frontend/src/entities/glossary/api/: glossaryApi.ts
frontend/src/entities/glossary/model/: types.ts
frontend/src/entities/message/: index.ts
frontend/src/entities/message/api/: messageApi.ts
frontend/src/entities/message/model/: hooks.ts  types.ts
frontend/src/entities/message/ui/: MessageItem.tsx
frontend/src/entities/session/: index.ts
frontend/src/entities/session/api/: sessionApi.ts
frontend/src/entities/session/model/: hooks.ts  types.ts
frontend/src/features/send-message/ui/: MessageInput.tsx
frontend/src/pages/BriefPage/: index.tsx
frontend/src/pages/ChatPage/: index.tsx
frontend/src/pages/GlossaryPage/: index.tsx
frontend/src/pages/NotFoundPage/: index.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/hooks/: index.ts  useClickOutside.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts
frontend/src/shared/types/: common.ts
frontend/src/shared/ui/: index.ts
frontend/src/shared/ui/Avatar/: Avatar.tsx
frontend/src/shared/ui/Button/: Button.tsx
frontend/src/shared/ui/Input/: Input.tsx
frontend/src/shared/ui/Spinner/: Spinner.tsx
frontend/src/shared/ui/Textarea/: Textarea.tsx
frontend/src/widgets/ChatWidget/: MessageList.tsx  index.tsx
frontend/src/widgets/HeaderWidget/: index.tsx
frontend/tests/: setup.ts
frontend/tests/mocks/: handlers.ts
